<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_name">Spieler Name</string>
    <string name="new_game">Neues Spiel</string>
    <string name="join_game">Spiel beitreten</string>
    <string name="bot_game">Gegen den Computer</string>
    <string name="copyright_short">&#169; 2014, 2015 Sergius Maier, Lukas Taake\n
\n
Spielkarten von Charles Esquiaqui</string>
    <string name="title_activity_lobby_create">Neues Spiel</string>
    <string name="title_activity_lobby_join">Spiel beitreten</string>
    <string name="bluetooth_not_supported">Bluetooth nicht vom Gerät unterstützt</string>
    <string name="refresh">Aktualisieren</string>
    <string name="lobbyName">Lobby Name:</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="connected_players">Verbundene Spieler</string>
    <string name="start">Spiel starten</string>
    <string name="refreshing">aktualisiere&#8230;</string>
    <string name="joining">Verbinde zu Spiel&#8230;</string>
    <string name="title_activity_game">Cards</string>
    <string name="cancel">Abbrechen</string>
    <string name="btn_rules">Regeln Anzeigen</string>
    <string name="connection_failed">Verbindung fehlgeschlagen</string>
    <string name="title_activity_rules">Spielregeln</string>
    <string name="rules"><b>Zu Beginn</b> einer Partie wird jedem Spieler ein Kartenstapel mit 3 Karten ausgeteilt.
Der Geber gibt sich selbst 2 Kartenstapel, von denen er sich nur den ersten angucken darf
und dann entscheiden muss, ob er diesen behält, oder lieber den unbekannten haben möchte.
Der jeweils nicht ausgewählte Stapel wird offen auf den Tisch gelegt.
Weitere drei Karten werden offen auf den Tisch gelegt.
Danach geht es der Reihe nach im Uhrzeigersinn, angefangen beim Nebenmann des Gebers.\n
\n
<b>Während des Spiels</b> ist pro Zug eine von vier möglichen Aktionen erlaubt:\n
- <b>Eine Karte tauschen</b> mit einer der Tischkarten\n
- <b>Alle Karten tauschen</b> mit allen Tischkarten\n
- <b>Schieben</b> nichts machen\n
- <b>Zu machen</b>, alle anderen Spieler sind noch einmal an der Reihe, danach ist das Spiel beendet.\n
\n
<b>Ziel des Spiels</b> ist es, möglichst viele Punkte auf der Hand zu haben.
        Dabei werden jeweils die Karten einer Farbe gezählt.
        Zahlenkarten zählen jeweils ihren Wert,
        Bube Dame und König zählen 10 Punkte und das Ass 11 Punkte.
        Ein Sonderfall ist es, wenn man 3 Karten mit gleichem Bild auf der Hand hat,
        diese Kombination zählt 30 1/2 Punkte. Ein weiterer Sonderfall sind drei Asse auf der Hand,
        diese zählen 33 Punkte.\n
<b>Gewonnen</b> hat am Ende der Spieler mit den meisten Punkten.</string>
<string name="become_visible">Sichtbar werden</string>
<string name="refresh_failed">Fehler beim Aktualisieren</string>
<string name="yes">Ja</string>
<string name="no">Nein</string>
<string name="leave_game">Spiel verlassen?</string>
<string name="close_game">Spiel beenden?</string>
<string name="close_game_info">Das Spiel wird für alle Spieler beendet.</string>
<string name="table_card">Tischkarte</string>
<string name="hand_card">Handkarte</string>
<string name="action_push">Schieben</string>
<string name="action_close">Klopfen</string>
<string name="action_swap_one">Eine tauschen</string>
<string name="action_swap_all">Alle tauschen</string>
</resources>
