<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.mrm1st3r.cards.MainActivity" >

    <EditText
        android:id="@+id/input_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/player_name" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/new_game"
        android:width="240dp"
        android:onClick="startGame" />

    <Button
        android:id="@+id/btn_join_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:width="240dp"
        android:onClick="startGame" />

    <Button
        android:id="@+id/btn_bot_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bot_game"
        android:width="240dp"
        android:onClick="startGame" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright_short"
        android:layout_marginTop="40dp" />

</LinearLayout>
